--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,9 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "baseHref": "/iss-tracker/",
             "browser": "src/main.ts",
+            "outputPath": "dist/iss-tracker",
             "tsConfig": "tsconfig.app.json",
             "assets": [
               {
@@ -31,13 +33,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "4kB",
-                  "maximumError": "8kB"
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
                 }
               ],
               "outputHashing": "all"
@@ -79,6 +81,9 @@
               "src/styles.css"
             ]
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
